--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h3 class="title-bg"> Projects i have been working on </h3>
             <div class="row">
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src="img/heartfelt.png" alt="image">
                     <h4>Heartfelt</h4>
                     <p>The final project developed on semester on DADIU, with 16 other students. Heartfelt is an isometric puzzle game,
                        where you play as a boy. He fights with his emotions, represented as enemies, which he has to fight with his heart, 
