added the correct references

--- a/index.htm
+++ b/index.htm
@@ -102,7 +102,7 @@ $(document).ready(function () {
                             <span class="gallery-hover-3col hidden-phone hidden-tablet">
 
                             </span>
-                            <a href="gallery-single.htm"><img src="img/project covers/heartfelt.png" alt="Heartfelt"></a>
+                            <a href="heartfelt.htm"><img src="img/project covers/heartfelt.png" alt="Heartfelt"></a>
                             <span class="project-details"><a href="heartfelt.htm">Heartfelt</a>Exam project on DADIU</span>
                         </li>
 
@@ -111,7 +111,7 @@ $(document).ready(function () {
                             <span class="gallery-hover-3col hidden-phone hidden-tablet">
 
                             </span>
-                            <a href="gallery-single.htm"><img src="img/project covers/comming.png" alt="Gallery"></a>
+                            <a href="master.htm"><img src="img/project covers/comming.png" alt="Gallery"></a>
                             <span class="project-details"><a href="master.htm">Deep Dungeon Adventure</a>Game made for Master Thesis</span>
                         </li>
 
@@ -120,7 +120,7 @@ $(document).ready(function () {
                             <span class="gallery-hover-3col hidden-phone hidden-tablet">
 
                             </span>
-                            <a href="gallery-single.htm"><img src="img/project covers/bachelor.png" alt="Gallery"></a>
+                            <a href="bachelor.htm"><img src="img/project covers/bachelor.png" alt="Gallery"></a>
                             <span class="project-details"><a href="bachelor.htm">AI bot for Starcraft: Brood War</a>Bachelor project</span>
                         </li>
                    
